Feat: implement the invoice list markup

--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -30,6 +30,7 @@ darkShade()
 
 body
     color: var(--system-color-text)
+    background-color: var(--system-color-fillPrimary)
     accent-color: var(--system-color-softBlue)
     caret-color: var(--system-color-softBlue)
 
