--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -34,6 +34,8 @@ body
     accent-color: var(--system-color-softBlue)
     caret-color: var(--system-color-softBlue)
 
+@require "./layouts.styl"
+
 @media(prefers-color-scheme: dark)
     :root
         darkShade()
