--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -1,8 +1,20 @@
+heading(weight, size, height, spacing)
+    font-weight: weight
+    font-size: size
+    line-height: height
+    letter-spacing: spacing
+decoElt(size, ratio, fill)
+    inline-size: size
+    aspect-ratio: ratio
+    background-color: fill
+
 darkShade()
     --color-text: var(--system-color-lightGrayishBlue)
     --color-blank: var(--system-color-darkPurple)
     --color-labelText: var(--system-color-lightPurple)
+    --color-shadow: rgba(0, 0, 0, 0.1)
     --page-bg: hsl(233 30 11)
+    --color-checkboxFill: var(--page-bg)
 
 
 :root
@@ -16,25 +28,187 @@ darkShade()
     --system-color-lightGrayishBlue: hsl(231 67 99)
     --system-color-darkBlue: hsl(231 28 7)
     --system-color-lightPurple: hsl(231 73 93)
+    --system-color-softPurple: hsl(231 37 63)
     --system-color-darkPurple: hsl(233 31 17)
 
     --system-color-fillPrimary: var(--page-bg, hsl(240 27 98))
     --system-color-blank: var(--color-blank, #fff)
-    --system-color-labelText: var(--color-labelText, hsl(231 37 63))
+    --system-color-labelText: var(--color-labelText, var(--system-color-softPurple))
     --system-color-captionText: var(--color-captionText, hsl(231 20 61))
     --system-color-text: var(--color-text, var(--system-color-darkBlue))
+    --system-color-shadow: var(--color-shadow, hsl(231 38 90))
+    --system-color-checkboxFill: var(--color-checkboxFill, var(--system-color-lightPurple))
 
+    --system-heading-large: 2.25rem
+    --system-heading-medium: 1.5rem
+    --system-heading-small: 0.9375rem
+    --system-text-body: 0.8125rem
+
+
+@font-face
+    font-family: "Spartan"
+    src: url("../LeagueSpartan-VariableFont_wght.ttf") format("truetype")
+    font-variant-ligatures: common-ligatures discretionary-ligatures historical-ligatures
+    font-feature-settings: "zero"
 
 [data-apearence="dark"]
     darkShade()
 
 body
+    font-family: Spartan
+    line-height: 1.5
+    font-size: 1rem
+    font-weight: 500
     color: var(--system-color-text)
     background-color: var(--system-color-fillPrimary)
     accent-color: var(--system-color-softBlue)
     caret-color: var(--system-color-softBlue)
+.heading-l
+    heading(bold, var(--system-heading-large), 1.1, -1px)
+.heading-m
+    heading(bold, var(--system-heading-medium), 1.1, -0.75px)
+.heading-s
+    heading(bold, var(--system-heading-small), 1, -0.25px)
+
+.sm-hide
+    display: none
+
+.no-gap
+    --space: 0
+.subtitle-text
+    color: var(--color-labelText, hsl(231, 20, 61))
+.btn
+    display: inline-flex
+    gap: var(--items-space, .5em)
+    align-items: center
+    border-radius: 1.5rem
+    font-weight: 900
+    font-size: var(--system-heading-small)
+    &:focus,
+    &:hover
+        background-color: var(--color-fill-hover, transparent)
+.btn-primary
+    --color-fill: var(--system-color-softBlue)
+    --color-fill-hover: var(--system-color-lightBlue)
+    --color-text: white
+
+.relative
+    position: relative
+
+[data-icon="arrow_down"]
+    --min-padding: .75em 1.5em .75em 0
+    --space: 0.1em
+    cursor: pointer
+    &::after
+        content: ""
+        decoElt(1em, 0.6, var(--system-color-softBlue))
+        clip-path: url(#arrow_down)
+        transform: var(--transformation, none)
+    [open] &
+        --transformation: rotateZ(180deg)
+
+[data-icon="add-circle"]
+    --min-padding: .75em 1.5em .75em .5em
+    &::before
+        content: ""
+        decoElt(2em, 1, currentColor)
+        clip-path: url(#add-circle)
 
 @require "./layouts.styl"
+
+#logo
+    width: 72px
+    aspect-ratio: 1
+    border-radius: 0 1.5em 1.5em 0
+    position: relative
+    background-color: var(--system-color-softBlue)
+    &::after
+        content: ""
+        position: absolute
+        decoElt(40%, 1, transparent)
+        inset: 0
+        margin: auto
+        background-image: conic-gradient(from -15deg at center, transparent 30deg, white 30deg)
+        border-radius: 50%
+    &::before
+        content: ""
+        decoElt(100%, 2, var(--system-color-lightBlue))
+        position: absolute
+        inset-block-end: 0
+        border-radius: 1.5em 0 1.5em 0
+
+#status-form
+    font-size: 1rem
+    font-weight: bold
+    border-radius: .5em
+    box-shadow: 0 10 20px 0 var(--system-color-shadow)
+    background-color: var(--system-color-blank)
+    position: absolute
+    inset-block-start: 110%
+    inset-inline-start: -50%
+    min-inline-size: 12rem
+    opacity: 0
+    [open] &
+        opacity: 1
+
+.inv-option
+    --space: 1em
+    cursor: pointer
+    &:focus,
+    &:hover
+        --checkbox-border: 2px solid var(--system-color-softBlue)
+
+.status-option
+    --icon-fill: none;
+    display: inline-block
+    position: relative
+    isolation: isolate
+    inline-size: 1.5rem
+    aspect-ratio: 1
+    & > *
+        position: absolute
+        inline-size: 100%
+        aspect-ratio: 1
+    & > svg
+        background-color: var(--fill, var(--system-color-checkboxFill))
+        border-radius: 0.25rem
+        z-index: -1
+        stroke: white
+        stroke-dashoffset: 1
+        stroke-dasharray: 1
+        padding: .15em
+        border: var(--checkbox-border, none)
+    & > input:checked + svg
+        --fill: var(--system-color-softBlue)
+        stroke-dashoffset: 0
+    & > input[type="checkbox"]
+        margin: 0
+        opacity: 0
+
+
+.banner
+    --alignment: stretch
+    --icon-fill: var(--system-color-softPurple)
+    background-color: var(--system-color-darkPurple)
+    .theme-switch
+        border-right: 1px solid var(--system-color-grayishBlue)
+        margin-inline-end: 1.5em
+    & > nav
+        padding: 0 1.5em
+
+.invoices:empty
+    display: none
+.empty
+    --min-padding: 2em 1.5em 0
+    display: none
+    text-align: center
+    & > p
+        max-inline-size: 25ch
+        white-space: pre-wrap
+    .invoices:empty + &
+        display: grid
+        place-content: center
+        place-items: center
 
 @media(prefers-color-scheme: dark)
     :root
