--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -78,8 +78,11 @@ body
     accent-color: var(--system-color-softBlue)
     caret-color: var(--system-color-softBlue)
 section
-    --min-padding 1.5em clamp(.5em, 4cqi, 1.5em)
-    container: "section" / inline-size
+    --color-fill: var(--system-color-fillPrimary)
+    --min-padding 1.5em clamp(.5em, 4cqi, 1.5em) .5em
+    overflow: hidden auto
+    max-block-size: calc(100lvb - 7rem)
+    container: section / inline-size
 .heading-l
     --f-size: var(--system-heading-large)
     heading(bold, var(--system-heading-large), 1.1, -1px)
@@ -90,7 +93,10 @@ section
 
 .sm-hide
     display: none
-
+.sticky-top
+    position: sticky
+    inset-block-start: 0
+    z-index: 2
 .no-gap
     --space: 0
 .subtitle-text
@@ -107,7 +113,12 @@ section
     --color-fill: var(--system-color-softBlue)
     --color-fill-hover: var(--system-color-lightBlue)
     --color-text: white
-
+.extend-click
+    position: relative
+    &::before
+        content: ""
+        inset: 0
+        position: absolute
 .relative
     position: relative
 
@@ -223,8 +234,6 @@ section
 
 .invoices:empty
     display: none
-.invoices
-    --min-padding: 1.5em 0
 .empty
     --min-padding: 2em 1.5em 0
     display: none
@@ -242,12 +251,14 @@ section
     --f-size: 1rem
     --f-size-diff: 0.2
     --f-size-fluid: 4cqi
+    --space: 1rem
     display: grid
     grid-template: var(--invoice-grid)
     font-weight: bold
     background-color: var(--system-color-blank)
     border-radius: .5rem
-    container: "invoice" / inline-size
+    align-items: center
+    container: invoice / inline-size
     & > :nth-child(2),
     & > :nth-child(3)
         font-weight: 500
@@ -258,13 +269,13 @@ section
             content: "#"
             color: var(--system-color-captionText)
     &> :nth-child(2)
-        grid-area: name
-    & > :nth-child(3)
         grid-area: date
+    & > :nth-child(3)
+        grid-area: name
     & > :nth-child(4)
         grid-area: total
     & > .box
-        --min-padding: .75rem clamp(.5rem, 5cqi, 1.5rem)
+        --min-padding: var(--box-padding, .75rem clamp(.5rem, 5cqi, 1.5rem))
         color: var(--color-text, currentColor)
         text-transform: capitalize
         background-color: var(--color-fill, transparent)
@@ -276,6 +287,25 @@ section
             display: inline-block
             decoElt(.5rem, 1, currentColor)
             border-radius: 50%
+@media screen and (min-width: 480px)
+    :root
+        --invoice-grid: "ref date name total status arrow" / 8ch 1fr 1fr .8fr .75fr 1.5em
+
+    .sm-hide
+        display: initial
+    .invoice__summary
+        --min-padding: 1em clamp(0.5em, 2cqi, 1.5em)
+        --box-padding: .625em clamp(0.5em, 2cqi, 1em)
+        --f-size-fluid: 2cqi
+        --f-size-diff: 0.3
+        gap: .5em
+        &::after
+            content: ""
+            decoElt(1.5em, 1, var(--system-color-softBlue))
+            clip-path: url(#arrow_left)
+            transform: rotateZ(180deg)
+            grid-area: arrow
+
 
 @media(prefers-color-scheme: dark)
     :root
